// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Search: Results renders correctly 1`] = `
<div
  className="result"
>
  <span
    className="type"
  />
  <h3
    className="title"
  >
    <a
      href="https://example.com"
    >
      Test title
    </a>
  </h3>
  <div
    className="childrenContainer"
  />
</div>
`;

exports[`Components : Search: Results renders correctly 2`] = `
<div
  className="result"
>
  <span
    className="type"
  />
  <h3
    className="title"
  >
    <a
      href="https://example.com"
    >
      Test title
    </a>
  </h3>
  <div
    className="childrenContainer"
  >
    <p>
      A child
    </p>
  </div>
</div>
`;

exports[`Components : Search: Results renders correctly 3`] = `
<div
  className="result"
>
  <span
    className="type"
  >
    Blog post
  </span>
  <h3
    className="title"
  >
    <a
      href="https://example.com"
    >
      Test title
    </a>
  </h3>
  <div
    className="childrenContainer"
  />
  <div
    className="resultDetails"
  >
    <p
      className="author"
    >
      By 
      <a
        href="https://twitter.com/author"
      >
        An author
      </a>
    </p>
    <p
      className="date"
    >
      Published
       on 
      April 23, 2020
    </p>
  </div>
</div>
`;
